test/files/neg/bug766.check
bug766.scala:5: error: not found: value badIdentifier
      val p = badIdentifier
              ^
one error found
